# prexlyn-project

./: .gitignore  DockerWannaBe  Dockerfile  README.md  build.sh  docker-compose.yaml  entrypoint.sh  manage.py  notes.md  pyproject.toml  render.yaml  requirements.txt
accounts/: urls.py  views.py
accounts/fixtures/: listings.json  realtors.json  users.json
accounts/management/commands/: load-fixtures.py
listings/: choices.py  models.py  urls.py  views.py
listings/migrations/: 0001_initial.py  0002_listing_photo_10_listing_photo_11_listing_photo_12_and_more.py  0003_listing_property_choice.py
pages/: urls.py  views.py
prexlyn/: asgi.py  settings.py  urls.py  wsgi.py
prexlyn/static/css/: admin.css  custom-style.css  navbar.css  style.css
realtors/: models.py
realtors/migrations/: 0001_initial.py
templates/: base.html
templates/accounts/: signin.html  signup.html
templates/admin/: base_site.html
templates/listings/: grid-listings.html  listing.html  listings.html  old-listings.html  property-choice.html  search.html
templates/pages/: about.html  contact.html  faqs.html  houses.html  index.html  lands.html  old-index.html  testimonials.html
templates/partials/: _alerts.html  _footer.html  _header.html
