[tool.poetry]
name = "prexlyn-project"
version = "0.1.0"
description = ""
authors = ["Godswill Umukoro <umukoro6@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asgiref = "3.7.2"
astroid = "3.0.2"
dill = "0.3.7"
django = "4.2.8"
isort = "5.13.2"
mccabe = "0.7.0"
pillow = "10.2.0"
platformdirs = "4.1.0"
psycopg2-binary = "2.9.9"
pylint = "3.0.3"
pylint-django = "2.5.5"
pylint-plugin-utils = "0.8.2"
sqlparse = "0.4.4"
tomli = "2.0.1"
tomlkit = "0.12.3"
typing-extensions = "4.9.0"
gunicorn = "^21.2.0"
environ = "^1.0"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
